# Hetu

./: .gitignore  .gitmodules  CMakeLists.txt  COMMITTERS.md  README.md  hetu.exp
hetu/: CMakeLists.txt
hetu/autograd/: autograd.cc  distributed_states.cc  distributed_states.h  op_meta.h  operator.cc  operator.h  tensor.cc  tensor.h  topo.cc
hetu/autograd/init/: initializer.h
hetu/autograd/ops/: Arithmetics.cc  Arithmetics.h  AsStrided.cc  AvgPool.cc  AvgPool.h  BatchMatMul.cc  BatchMatMul.h  BatchNorm.cc  BatchNorm.h  BinaryCrossEntropy.cc  BinaryCrossEntropy.h  Broadcast.cc  Broadcast.h  BroadcastShape.cc  BroadcastShape.h  Communicate.cc  Communicate.h  Concat.cc  Concat.h  Concatenate.cc  Concatenate.h  Conv2d.cc  Conv2d.h  Conv2dBroadcast.cc  Conv2dBroadcast.h  Conv2dReduceSum.cc  Conv2dReduceSum.h  DataTransfer.cc  Dropout.cc  Dropout.h  Dropout2d.cc  Dropout2d.h  Einsum.cc  Einsum.h  EmbeddingLookup.cc  EmbeddingLookup.h  InstanceNorm.cc  InstanceNorm.h  Interpolate.cc  KLDivLoss.cc  (+62 more)
hetu/common/: macros.h
hetu/core/: bfloat16.h  device.cc  device.h  dtype.cc  dtype.h  float16.h  memory_pool.cc  memory_pool.h  ndarray.cc  ndarray.h  ndarray_meta.cc  ndarray_meta.h  ndarray_storage.cc  ndarray_storage.h  reduction_type.cc  reduction_type.h  stream.h  symbol.cc  symbol.h
hetu/execution/: dar_executor.cc  dar_executor.h  device_placer.cc
hetu/flash_attn/src/: flash.h  flash_bwd_kernel.h  flash_bwd_launch_template.h  flash_fwd_hdim128_fp16_sm80.cu  flash_fwd_hdim160_bf16_sm80.cu  flash_fwd_hdim160_fp16_sm80.cu  flash_fwd_hdim192_bf16_sm80.cu  flash_fwd_hdim192_fp16_sm80.cu  flash_fwd_hdim224_bf16_sm80.cu  flash_fwd_hdim224_fp16_sm80.cu  flash_fwd_hdim256_bf16_sm80.cu  flash_fwd_hdim256_fp16_sm80.cu  flash_fwd_hdim32_bf16_sm80.cu  flash_fwd_hdim32_fp16_sm80.cu  flash_fwd_hdim64_bf16_sm80.cu  flash_fwd_hdim64_fp16_sm80.cu  flash_fwd_hdim96_bf16_sm80.cu  flash_fwd_hdim96_fp16_sm80.cu  flash_fwd_kernel.h  flash_fwd_launch_template.h  flash_fwd_split_hdim128_bf16_sm80.cu  flash_fwd_split_hdim128_fp16_sm80.cu  flash_fwd_split_hdim160_bf16_sm80.cu  flash_fwd_split_hdim160_fp16_sm80.cu  flash_fwd_split_hdim192_bf16_sm80.cu  flash_fwd_split_hdim192_fp16_sm80.cu  flash_fwd_split_hdim224_bf16_sm80.cu  flash_fwd_split_hdim224_fp16_sm80.cu  flash_fwd_split_hdim256_bf16_sm80.cu  flash_fwd_split_hdim256_fp16_sm80.cu  flash_fwd_split_hdim32_bf16_sm80.cu  flash_fwd_split_hdim32_fp16_sm80.cu  flash_fwd_split_hdim64_bf16_sm80.cu  flash_fwd_split_hdim64_fp16_sm80.cu  flash_fwd_split_hdim96_bf16_sm80.cu  flash_fwd_split_hdim96_fp16_sm80.cu  generate_kernels.py  softmax.h
hetu/graph/: common.h  define_and_run_graph.cc  define_and_run_graph.h  define_by_run_graph.cc  define_by_run_graph.h  distributed_states.cc  distributed_states.h  eager_graph.cc  eager_graph.h  executable_graph.cc  executable_graph.h  graph.cc  graph.h  headers.h  operator.cc  operator.h  pre_post_exec_graph.cc  profiler.cc  profiler.h  subgraph.cc  subgraph.h  switch_exec_graph.cc  switch_exec_graph.h  switch_utils.cc  tensor.cc  tensor.h
hetu/graph/autocast/: autocast.cc  autocast.h
hetu/graph/data/: dataloader.cc  dataloader.h
hetu/graph/init/: initializer.cc  initializer.h
hetu/graph/offload/: activation_cpu_offload.cc  activation_cpu_offload.h
hetu/graph/ops/: Abs.cc  Abs.h  Arange.cc  Arange.h  Arithmetics.cc  Arithmetics.h  AsStrided.cc  AsStrided.h  Attention.cc  Attention.h  AvgPool.cc  AvgPool.h  BatchMatMul.cc  BatchMatMul.h  BatchNorm.cc  BatchNorm.h  Bool.cc  Bool.h  Broadcast.cc  Broadcast.h  Ceil.cc  Ceil.h  CheckFinite.cc  CheckFinite.h  Communication.cc  Communication.h  Concat.cc  Concat.h  Concatenate.cc  Concatenate.h  Contiguous.cc  Contiguous.h  Conv2d.cc  Conv2d.h  Diagonal.cc  Diagonal.h  Dropout.cc  Dropout.h  Dropout2d.cc  Dropout2d.h  (+144 more)
hetu/graph/optim/: optimizer.cc  optimizer.h  optimizerParamScheduler.h
hetu/graph/recompute/: recompute.cc  recompute.h
hetu/graph/utils/: tensor_utils.h
hetu/impl/communication/: comm_group.h  mpi_comm_group.cc  mpi_comm_group.h  nccl_comm_group.cu  nccl_comm_group.h  rpc_client.cc  rpc_client.h  rpc_client_impl.h  rpc_comm.cc
hetu/impl/cuda/: CUDABlas.cc  CUDABlas.h  CUDADnn.h
hetu/impl/kernel/: Abs.cc  Abs.cu  Activation.cc  Activation.cu  AddConst.cc  AddConst.cu  AddElewise.cc  AddElewise.cu  Arange.cc  Arange.cu  ArraySet.cc  ArraySet.cu  AsStrided.cc  AsStrided.cu  AvgPool.cc  AvgPool.cu  Baddbmm.cu  BatchMatMul.cc  BatchMatMul.cu  BatchNorm.cc  BatchNorm.cu  Binary.cuh  BinaryConst.cc  BinaryConst.cu  BinaryCrossEntropy.cc  BinaryCrossEntropy.cu  BinaryElewise.cc  BinaryElewise.cu  Bool.cc  Bool.cu  Broadcast.cc  Broadcast.cu  BroadcastShape.cc  BroadcastShape.cu  CheckFinite.cu  Clamp.cu  Communicate.cc  Communicate.cu  Concat.cc  Concat.cu  (+141 more)
hetu/impl/memory/: CPUMemoryPool.cc  CPUMemoryPool.h  CUDABFCMemoryPool.cu  CUDABFCMemoryPool.cuh  CUDACachingMemoryPool.cu  CUDACachingMemoryPool.cuh  CUDAMemoryPool.cu  CUDAMemoryPool.cuh  CUDAStreamOrderedMemoryPool.cu  CUDAStreamOrderedMemoryPool.cuh  memory_manager.cc  memory_manager.h
hetu/impl/profiler/: profiler.cc  profiler.h
hetu/impl/stream/: CPUStream.cc  CPUStream.h  CUDAStream.cc  CUDAStream.h  TaskQueue.h
hetu/impl/utils/: common_utils.h  cuda_math.h  cuda_utils.cu  cuda_utils.h  dispatch.h  ndarray_utils.h  numeric_limits.h  offset_calculator.cu  offset_calculator.cuh  omp_utils.h
hetu/test/: CMakeLists.txt  test_comm_group.cc  test_local.cc  test_ndarray_ops.cc  test_utils.h
hetu/test/cmake/: config.cmake
hetu/utils/: context_store.h  json.cc  shared_ptr_wrapper.h  string_utils.h  task_queue.h
hetu/utils/json/: adl_serializer.hpp  byte_container_with_subtype.hpp  json.hpp  json_fwd.hpp  ordered_map.hpp
hetu/v1/tests/: test_softmax_accuracy.py  test_softmax_accuracy.sh  test_tensor_reset_and_get.sh
tests/refactor/cpp/: CMakeLists.txt  test_comm_group.cc  test_comm_ops.cc  test_distributed_tensor.cc  test_dp.cc  test_ds_for_dp.cc  test_pp.cc  (+5 more)
workloads/cuda/: CMakeLists.txt  workload_heavy_communicate.cu  workload_heavy_compute.cu  workload_stall_communicate.cu
(+778 files in other folders)
