# set(HETU_SRC_DIR ${CMAKE_SOURCE_DIR})
set(HETU_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/..)
file(GLOB_RECURSE HETU_SRC ${HETU_SRC_DIR}/hetu/*.cc)
if(${HETU_COMPILE_CUDA})
  add_definitions(-DHETU_CUDA_ENABLED)
  file(GLOB_RECURSE HETU_CU_SRC ${HETU_SRC_DIR}/hetu/*.cu)
  list(APPEND HETU_SRC ${HETU_CU_SRC})
endif()
list(FILTER HETU_SRC EXCLUDE REGEX "${HETU_SRC_DIR}/hetu/test/*")
add_library(hetu_C SHARED ${HETU_SRC})
target_include_directories(hetu_C PUBLIC ${HETU_SRC_DIR})

if(${HETU_COMPILE_OMP})
  target_link_libraries(hetu_C PUBLIC MPI::MPI_CXX)
endif()

if(${HETU_COMPILE_CUDA})
  target_link_libraries(hetu_C PUBLIC CUDA::cudart CUDA::cublas CUDA::cusparse CUDA::curand CUDA::cuda_driver)
  set_property(TARGET hetu_C PROPERTY CUDA_ARCHITECTURES ${HETU_CUDA_ARCH})
endif()

if(${HETU_COMPILE_CUDNN})
  find_package(CUDNN 7.5 REQUIRED)
  message("CUDNN_LIBRARY_PATH=${CUDNN_LIBRARY_PATH}")
  target_link_libraries(hetu_C PUBLIC ${CUDNN_LIBRARY_PATH})
  target_include_directories(hetu_C PUBLIC ${CUDNN_INCLUDE_PATH})
endif()

if(${HETU_COMPILE_NCCL})
find_package(NCCL 2.5 REQUIRED)
target_link_libraries(hetu_C PUBLIC ${NCCL_LIBRARIES})
target_include_directories(hetu_C PUBLIC ${NCCL_INCLUDE_DIRS})
endif()


if(${HETU_COMPILE_MKL})
find_package(MKL)
message("LIBS = ${DNNL_LIBRARY}, ${DNNL_INCLUDE_DIR}, ${DNNL_BUILD_INCLUDE_DIR}")
target_include_directories(hetu_C PUBLIC ${DNNL_INCLUDE_DIR})
target_include_directories(hetu_C PUBLIC ${DNNL_BUILD_INCLUDE_DIR})
target_link_libraries(hetu_C PUBLIC ${DNNL_LIBRARY})
endif()
