set(HETU_CUDA_WORKLOAD_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
file(GLOB HETU_CUDA_WORKLOAD_SRC ${HETU_CUDA_WORKLOAD_SRC_DIR}/workload_*.cu)
foreach(workload ${HETU_CUDA_WORKLOAD_SRC})
  get_filename_component(WName ${workload} NAME_WE)
  include_directories(${NCCL_INCLUDE_DIRS})
  add_executable(${WName} ${workload})
  target_link_libraries(${WName} PUBLIC ${NCCL_LIBRARIES})
  set_property(TARGET ${WName} PROPERTY CUDA_ARCHITECTURES ${HETU_CUDA_ARCH})
endforeach()
