set(HETU_CPP_TEST_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
file(GLOB HETU_CPP_TEST_SRC ${HETU_CPP_TEST_SRC_DIR}/test_*.cc)
list(FILTER HETU_CPP_TEST_SRC EXCLUDE REGEX "${HETU_CPP_TEST_SRC_DIR}/test_distributed_tensor.cc")
list(FILTER HETU_CPP_TEST_SRC EXCLUDE REGEX "${HETU_CPP_TEST_SRC_DIR}/test_dp.cc")
list(FILTER HETU_CPP_TEST_SRC EXCLUDE REGEX "${HETU_CPP_TEST_SRC_DIR}/test_ds_for_dp.cc")
list(FILTER HETU_CPP_TEST_SRC EXCLUDE REGEX "${HETU_CPP_TEST_SRC_DIR}/test_local.cc")
list(FILTER HETU_CPP_TEST_SRC EXCLUDE REGEX "${HETU_CPP_TEST_SRC_DIR}/test_pp.cc")
foreach(test ${HETU_CPP_TEST_SRC})
  get_filename_component(TName ${test} NAME_WE)
  add_executable(${TName} ${test})
  target_link_libraries(${TName} PUBLIC hetu_C)
  target_include_directories(${TName} PRIVATE ${HETU_CPP_TEST_SRC_DIR})
endforeach()
